--- a/index.html
+++ b/index.html
@@ -1,46 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Perdoname</title>
+  </head>
+  <body>
+    <audio id="myAudio" autoplay muted>
+      <source src="sound/Maria Becerra - Desafiando el Destino.mp3" type="audio/mpeg">
+    </audio>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width" />
-  <title>Sorpresa!</title>
-
-  <link rel="stylesheet" href="styles/flexbox-center-container.css" media="all">
-  <link rel="stylesheet" href="styles/system-fonts.css" media="all">
-  <link rel="stylesheet" href="styles/style.css" media="all">
-</head>
-
-<body>
-  <canvas id=c></canvas>
-  <canvas id="confetti"></canvas>
-  <audio id="audio" src="sound/maria.mp3" preload="auto"></audio>
-  <div class="container" id="count">
-    <h1 id="head">Cuenta regresiva:</h1>
-    <ul>
-      <li><span id="day"></span>dias</li>
-      <li><span id="hour"></span>horas</li>
-      <li><span id="minute"></span>minutos</li>
-      <li><span id="second"></span>segundos</li>
-    </ul>
-  </div>
-  <div id="merrywrap" class="merrywrap">
-    <canvas id="snowfall"></canvas>
-    <div class="giftbox">
-      <div class="cover">
-        <div></div>
+    <main class="container">
+      <img class="cat-img" src="img/cat-0.jpg" alt="gatito bonito" />
+      <p class="title">Silvana me perdonas?</p>
+      <div class="buttons">
+        <button type="button" class="btn btn--yes">Si</button>
+        <button type="button" class="btn btn--no">No</button>
       </div>
-      <div id="box"></div>
-    </div>
+    </main>
 
-  <div id="box"></div>
-  <img id="hidden-image" src="image/prodigios.webp" alt="Descripción de la imagen" style="display: none;">
-  <div id="image-container"></div> 
-
-    
-    
-</body>
-<script src="scripts/confetti.min.js" charset="utf-8"></script>
-<script src="scripts/index.js" charset="utf-8"></script>
-
+    <script type="module" src="script.js"></script>
+  </body>
 </html>
